# online-shopping-system

./: .gitignore  INSTALL.md  README.md  package-lock.json  package.json  setup_database.bat  start_backend.bat  troubleshoot.md
backend/: Cargo.toml  build.rs
backend/.cargo/: config.toml
backend/migrations/2023-05-30-000001_create_admin_profiles/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/config/: database.rs  jwt.rs  mod.rs
backend/src/handlers/: admin.rs  analytics.rs  auth.rs  cart.rs  favorite.rs  mod.rs  order.rs  product.rs  user.rs  user_profile.rs  vendor_profile.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: admin_profile.rs  cart.rs  favorite.rs  mod.rs  order.rs  product.rs  user.rs  user_profile.rs  vendor_profile.rs
backend/src/routes/: admin.rs  analytics.rs  auth.rs  cart.rs  favorite.rs  mod.rs  order.rs  product.rs  user.rs  user_profile.rs  vendor_profile.rs
backend/src/utils/: validators.rs
db_scripts/: setup_database.sql
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  config.ts  custom.d.ts  index.tsx
frontend/src/components/: StagewiseToolbarWrapper.tsx
frontend/src/hooks/: redux.ts
frontend/src/layouts/: AdminLayout.tsx  CustomerLayout.tsx  LayoutSelector.tsx  VendorLayout.tsx
frontend/src/mocks/: products.ts
frontend/src/pages/: AdminDashboard.tsx  LoginPage.tsx  OrderDetailPage.tsx  OrdersPage.tsx  Register.tsx
frontend/src/store/: hooks.ts  index.ts
frontend/src/types/: auth.ts  cart.ts  order.ts  (+2 more)
(+34 files in other folders)
