[package]
name = "online-shopping-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
diesel = { version = "2.1.0", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
r2d2 = "0.8.10"
redis = { version = "0.23.0", features = ["tokio-comp"] }
futures = "0.3.28"
regex = "1.8.1"
lazy_static = "1.4.0"
mysql = "24.0.0" 
url = "2.5.4"
